--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -1,5 +1,5 @@
 fastapi>=0.110.0
 uvicorn[standard]>=0.29.0
 pydantic>=2.7.0
-google-genai>=0.3.0
+google-generativeai>=0.5.0
 python-multipart>=0.0.9
