--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,1 +1,12 @@
-node_modules
+**/node_modules/
+**/.next/
+**/out/
+**/dist/
+**/__pycache__/
+**/*.pyc
+**/venv/
+
+.env
+.env.*
+.env.local
+.env.*.local
