fix: cloudbuild yaml syntax and deploy target

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,29 +1,36 @@
 steps:
-  # Build the container image with Commit SHA tag
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA', '-t', 'gcr.io/$PROJECT_ID/wedding-ai-backend:latest', '.']
-    dir: 'ai_service'  # Execute build in the ai_service directory
+  - name: "gcr.io/cloud-builders/docker"
+    dir: "ai_service"
+    args:
+      - "build"
+      - "-t"
+      - "gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA"
+      - "-t"
+      - "gcr.io/$PROJECT_ID/wedding-ai-backend:latest"
+      - "."
 
-  # Push the images (SHA tag and latest)
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA']
+  - name: "gcr.io/cloud-builders/docker"
+    args:
+      - "push"
+      - "gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA"
 
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/wedding-ai-backend:latest']
+  - name: "gcr.io/cloud-builders/docker"
+    args:
+      - "push"
+      - "gcr.io/$PROJECT_ID/wedding-ai-backend:latest"
 
-  # Deploy to Cloud Run using the SHA tag
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
- args:
-      - 'run'
-      - 'deploy'
-      - 'wedding-ai-backend'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA'
-      - '--region'
-      - 'asia-northeast3'
-      - '--allow-unauthenticated'
+  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
+    entrypoint: "gcloud"
+    args:
+      - "run"
+      - "deploy"
+      - "wedding-ai-backend"
+      - "--image"
+      - "gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA"
+      - "--region"
+      - "asia-northeast3"
+      - "--allow-unauthenticated"
 
 images:
-  - 'gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA'
-  - 'gcr.io/$PROJECT_ID/wedding-ai-backend:latest'
+  - "gcr.io/$PROJECT_ID/wedding-ai-backend:$SHORT_SHA"
+  - "gcr.io/$PROJECT_ID/wedding-ai-backend:latest"
