--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -2,4 +2,5 @@ fastapi==0.110.0
 uvicorn[standard]==0.29.0
 pydantic==2.7.0
 python-multipart==0.0.9
-google-genai==0.3.0
+google-genai==1.55.0
+google-api-core>=2.11.0
